Add vtkOSPRay code

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 3.20)
+cmake_minimum_required(VERSION 3.15)
 project(vtkOSPRayExample)
 
 find_package(ospray REQUIRED)
@@ -14,4 +14,27 @@ target_link_libraries(
     PUBLIC
         ospray::ospray
         ${VTK_LIBRARIES}
+)
+
+install(
+    TARGETS main
+    DESTINATION bin
+)
+
+
+add_executable(
+    vtkPDistributedDataFilterExample
+    vtkPDistributedDataFilterExample.cpp
+)
+
+target_link_libraries(
+    vtkPDistributedDataFilterExample
+    PUBLIC
+        ospray::ospray
+        ${VTK_LIBRARIES}
+)
+
+install(
+    TARGETS vtkPDistributedDataFilterExample
+    DESTINATION bin
 )
