Update code to not use vtkOSPRayPass

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -34,6 +34,7 @@ target_link_libraries(
     PUBLIC
         ospray::ospray
         ${VTK_LIBRARIES}
+        VTK::RenderingVolumeOpenGL2
 )
 
 install(
